tests/sumo/errors/invalid_insertionChecks/errors.sumo
Error: Unknown value 'dummy' in insertionChecks.
Quitting (on error).
